# ai-agent-langchain

./: .env.example  README.md  agent.py  app.py  logger_config.py  pyproject.toml  requirements.txt  retriever.py  tools.py
app/agents/: base.py  middlewares.py  persistence.py  profiles.py  retriever.py  tools.py
app/core/: config.py  logger_config.py
app/gradio/: app.py  schemas.py
app/gradio/views/: data_analyst.py  movie_recommender.py  research.py  travel.py  tutor.py
app/utils/: __init__.py  file_utils.py  text_utils.py
