[project]
name = "ai-agent-langchain"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.3.1",
    "beautifulsoup4>=4.14.3",
    "duckdb>=1.4.3",
    "duckduckgo-search>=8.1.1",
    "faiss-cpu>=1.13.2",
    "gradio>=6.2.0",
    "langchain>=1.2.0",
    "langchain-anthropic>=1.3.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.1.2",
    "langchain-mongodb>=0.9.0",
    "langchain-openai>=1.1.6",
    "langgraph>=1.0.5",
    "langgraph-checkpoint-mongodb>=0.3.0",
    "markdownify>=1.2.2",
    "motor>=3.7.1",
    "pydantic-settings>=2.12.0",
    "tavily-python>=0.7.17",
    "wikipedia>=1.4.0",
]
